--- a/src/app/_components/embla.css
+++ b/src/app/_components/embla.css
@@ -1,7 +1,7 @@
 .embla {
   --slide-spacing: 1rem;
   --slide-size: 100%;
-  --slide-height: 19rem;
+  --slide-height: 16rem;
   padding: 1.6rem;
 }
 .embla__viewport {
@@ -24,6 +24,7 @@
   height: var(--slide-height);
   width: 100%;
   object-fit: cover;
+  border-radius: 20px;
 }
 .embla__slide__number {
   width: 4.6rem;
